<?xml version="1.0" encoding="UTF-8"?>

<!-- Build file for Juggling Lab. -->
<!-- For use with the Maven build tool (http://maven.apache.org) -->

<!-- `mvn package` to compile and build jar -->
<!-- `mvn clean` to remove temp build directory -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jugglinglab</groupId>
    <artifactId>jugglinglab</artifactId>
    <packaging>jar</packaging>
    <version>1.6.6</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
        <commons-math3.version>3.6.1</commons-math3.version>
        <ortools.version>9.4.1874</ortools.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>${commons-math3.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.ortools/ortools-java -->
        <dependency>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-java</artifactId>
            <version>${ortools.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- remove existing `bin/JugglingLab.jar` -->
            <!-- otherwise on overwrite Maven creates `bin/original-JugglingLab.jar` -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <delete file="${project.basedir}/bin/JugglingLab.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- build shaded jar with all dependencies except OR-Tools libraries -->
            <!-- output is `bin/JugglingLab.jar` -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/AL2.0</exclude>
                                        <exclude>META-INF/LGPL2.1</exclude>
                                        <exclude>META-INF/LICENSE</exclude>
                                    </excludes>
                                </filter>
                            </filters>

                            <artifactSet>
                                <excludes>
                                    <exclude>com.google.ortools:ortools-darwin*</exclude>
                                    <exclude>com.google.ortools:ortools-win32*</exclude>
                                    <exclude>com.google.ortools:ortools-linux*</exclude>
                                </excludes>
                            </artifactSet>

                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>jugglinglab.JugglingLab</mainClass>
                                </transformer>
                            </transformers>

                            <outputFile>${project.basedir}/bin/JugglingLab.jar</outputFile>

                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- copy OR-Tools libraries to bin/ortools-lib/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>package</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>

                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.google.ortools</groupId>
                                    <artifactId>ortools-linux-x86-64</artifactId>
                                    <version>${ortools.version}</version>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.basedir}/bin/ortools-lib</outputDirectory>
                                    <excludes>META-INF/</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.google.ortools</groupId>
                                    <artifactId>ortools-darwin-x86-64</artifactId>
                                    <version>${ortools.version}</version>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.basedir}/bin/ortools-lib</outputDirectory>
                                    <excludes>META-INF/</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.google.ortools</groupId>
                                    <artifactId>ortools-win32-x86-64</artifactId>
                                    <version>${ortools.version}</version>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.basedir}/bin/ortools-lib</outputDirectory>
                                    <excludes>META-INF/</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.google.ortools</groupId>
                                    <artifactId>ortools-linux-aarch64</artifactId>
                                    <version>${ortools.version}</version>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.basedir}/bin/ortools-lib</outputDirectory>
                                    <excludes>META-INF/</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.google.ortools</groupId>
                                    <artifactId>ortools-darwin-aarch64</artifactId>
                                    <version>${ortools.version}</version>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.basedir}/bin/ortools-lib</outputDirectory>
                                    <excludes>META-INF/</excludes>
                                </artifactItem>
                            </artifactItems>

                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
